# django-template

./: .env.example  README.md  pyproject.toml
apps/account/: models.py
core/settings/: base.py  dev.py  prod.py
