[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jackie <test@test.test>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.16"
djangorestframework = "3.14.0"
python-decouple = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
